[tool.poetry]
name = "recommendation-engines"
version = "0.1.0"
description = ""
authors = ["Gianluca Manca <gianluca.manca@de.abb.com>"]
readme = "README.md"
packages = [{include = "recommendation_engines"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
numpy = "^1.23.3"
sklearn = "^0.0"
black = "^22.8.0"
matplotlib = "^3.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
